# ProDEC

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: api.md  usage.md
docs/source/: conf.py  modules.rst  prodec.rst
src/: Descriptor.py  ProteinDescriptors.py  Transform.py  __init__.py  data.json  utils.py
src/prodec/: Descriptor.py  ProteinDescriptors.py  Transform.py  __init__.py  data.json  utils.py  version.py
tests/: __init__.py  constants.py  test_descriptor.py  test_proteindescriptors.py  test_transform.py
