[metadata]
name = prodec
version = 1.0.1
description = A package to calculate protein sequence descriptors
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/OlivierBeq/ProDEC

author = Olivier J. M. Béquignon
author_email = olivier.bequignon.maintainer@gmail.com
maintainer = Olivier J. M. Béquignon
maintainer_email = olivier.bequignon.maintainer@gmail.com

license = MIT
license_file = LICENSE

classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6

keywords =
    protein
    descriptors
    proteochemometrics
    PCM
    QSAR

[options]
include_package_data = True
packages = find:
package_dir = 
    = src
install_requires =
    orjson
    numpy
    psutil
    pandas

[options.packages.find]
where = src

[options.package_data]
prodec = *.json

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints

testing =
    pytest